--- a/AppStorePlayground/Storyboard/TopGrossingAppViewCell.xib
+++ b/AppStorePlayground/Storyboard/TopGrossingAppViewCell.xib
@@ -19,10 +19,10 @@
                 <rect key="frame" x="0.0" y="0.0" width="150" height="200"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZ9-fT-t6e">
-                        <rect key="frame" x="5" y="116" width="140" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZ9-fT-t6e">
+                        <rect key="frame" x="25" y="116" width="100" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="140" id="O7l-cg-LuI"/>
+                            <constraint firstAttribute="width" constant="100" id="O7l-cg-LuI"/>
                             <constraint firstAttribute="height" constant="44" id="Vme-j6-cLf"/>
                         </constraints>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
