--- a/AppStorePlayground/Layout/TopFreeAppViewCell.xib
+++ b/AppStorePlayground/Layout/TopFreeAppViewCell.xib
@@ -20,35 +20,35 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZI-Bf-TIH">
-                        <rect key="frame" x="24" y="39" width="30" height="21"/>
+                        <rect key="frame" x="24" y="39" width="29" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="vCi-P4-c5W"/>
+                            <constraint firstAttribute="width" constant="29" id="vCi-P4-c5W"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hSw-8g-i2M">
-                        <rect key="frame" x="64" y="12.5" width="75" height="75"/>
+                        <rect key="frame" x="57" y="12.5" width="75" height="75"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="75" id="TOz-Dl-pgf"/>
                             <constraint firstAttribute="height" constant="75" id="iP9-8P-g0e"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceg-20-zcN">
-                        <rect key="frame" x="147" y="11" width="204" height="21"/>
+                        <rect key="frame" x="140" y="13" width="211" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="63Q-jf-Mxo">
-                        <rect key="frame" x="147" y="40" width="204" height="15"/>
+                        <rect key="frame" x="140" y="42" width="211" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1gp-vC-h9x">
-                        <rect key="frame" x="147" y="63" width="80" height="22"/>
+                        <rect key="frame" x="140" y="65" width="80" height="22"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="Brb-c3-Axl"/>
@@ -56,7 +56,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Count)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6ve-cw-nMU">
-                        <rect key="frame" x="231" y="66" width="43" height="15"/>
+                        <rect key="frame" x="224" y="68" width="50" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -66,10 +66,10 @@
                     <constraint firstAttribute="trailingMargin" secondItem="ceg-20-zcN" secondAttribute="trailing" constant="8" id="15i-nX-Te0"/>
                     <constraint firstItem="hZI-Bf-TIH" firstAttribute="leading" secondItem="Vpl-fy-Oux" secondAttribute="leadingMargin" constant="8" id="1Ag-FC-2z3"/>
                     <constraint firstItem="ceg-20-zcN" firstAttribute="leading" secondItem="hSw-8g-i2M" secondAttribute="trailing" constant="8" id="30O-Zo-y80"/>
-                    <constraint firstItem="hSw-8g-i2M" firstAttribute="leading" secondItem="hZI-Bf-TIH" secondAttribute="trailing" constant="10" id="8Ks-CA-gSR"/>
+                    <constraint firstItem="hSw-8g-i2M" firstAttribute="leading" secondItem="hZI-Bf-TIH" secondAttribute="trailing" constant="4" id="8Ks-CA-gSR"/>
                     <constraint firstItem="hSw-8g-i2M" firstAttribute="centerY" secondItem="Vpl-fy-Oux" secondAttribute="centerY" id="AUs-0o-ihn"/>
                     <constraint firstItem="hZI-Bf-TIH" firstAttribute="centerY" secondItem="Vpl-fy-Oux" secondAttribute="centerY" id="Dvi-Y2-5JR"/>
-                    <constraint firstItem="ceg-20-zcN" firstAttribute="top" secondItem="Vpl-fy-Oux" secondAttribute="topMargin" id="FCk-rC-QZY"/>
+                    <constraint firstItem="ceg-20-zcN" firstAttribute="top" secondItem="Vpl-fy-Oux" secondAttribute="topMargin" constant="2" id="FCk-rC-QZY"/>
                     <constraint firstItem="1gp-vC-h9x" firstAttribute="leading" secondItem="hSw-8g-i2M" secondAttribute="trailing" constant="8" id="FYu-SQ-Hi0"/>
                     <constraint firstItem="63Q-jf-Mxo" firstAttribute="top" secondItem="ceg-20-zcN" secondAttribute="bottom" constant="8" id="Ggb-fI-njS"/>
                     <constraint firstItem="6ve-cw-nMU" firstAttribute="centerY" secondItem="1gp-vC-h9x" secondAttribute="centerY" id="Mu1-m1-d42"/>
